<resources>
    <string name="app_name">MadLibs</string>
    <string name="instructions">Welcome, to Mad Libs!I will ask you to fill in words to complete a story.
    You won\'t get to see the story until you filled in all the words,
        that\'s part of the fun.</string>
    <string name="title">Are you ready!</string>
    <string name="button">Get Started</string>
    <string name="instruction2">Fill in the words to complete the story</string>
    <string name="hint">type in any word!</string>
    <string name="word_count"></string>
    <string name="your_story">Your Mad Lib Story</string>
    <string name="back_button">make another story</string>
    <string name="choose_title">Choose your story!</string>
    <string name="lets_go">play!</string>
</resources>
